--- a/stickynotes/Views/Notes/Main.cshtml
+++ b/stickynotes/Views/Notes/Main.cshtml
@@ -1,35 +1,12 @@
-@model IEnumerable<stickynotes.Models.Note>
-
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Welcome!";
 }
 
-<h1>MAIN</h1>
+<h1>Welcome to Sticky Notes!</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Text)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Text)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+@foreach (var note in Model)
+{
+    <div>
+        @note.Text
+    </div>
 }
-    </tbody>
-</table>
