--- a/stickynotes/wwwroot/css/site.css
+++ b/stickynotes/wwwroot/css/site.css
@@ -20,3 +20,26 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.stickynote {
+    height: 100px;
+    width: 100px;
+    background-color: #feff9c;
+    box-shadow: 7px 3px 15px;
+    border-radius: 3px;
+    text-align: center;
+    padding: 20px;
+    margin: 20px;
+    font-family: 'Inter', sans-serif;
+    font-weight: normal;
+    font-size: 12pt;
+    flex-wrap: wrap;
+    overflow: auto;
+}
+
+.box {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+}
